Fixing bad scrollbar on partial gallery and sorting the screenshots.

--- a/editor/source/styles/selective/partials.sass
+++ b/editor/source/styles/selective/partials.sass
@@ -16,6 +16,7 @@
   max-width: 100%
   margin-top: $ge-space-medium
   overflow-x: auto
+  overflow-y: hidden
   white-space: nowrap
 
   img
